2010-10-18  Richard Guenther  <rguenther@suse.de>

PR lto/44950
	* tree.c (free_lang_data_in_decl): As we clear TYPE_METHODS
	also clear references to entries of it.

	* g++.dg/lto/20101015-2_0.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@165629 138bc75d-0d04-0410-961f-82ee72b054a4